--- a/research_notebook/_toc.yml
+++ b/research_notebook/_toc.yml
@@ -52,6 +52,7 @@
     - file: content/notes/kernels/kernel_derivatives
   - file: content/notes/egps/overview.md
     sections:
+    - file: content/notes/egps/predictions.md
     - file: content/notes/egps/gauss_approx.md
     - file: content/notes/egps/mcmc.md
     - file: content/notes/egps/taylor.md
