--- a/research_notebook/_config.yml
+++ b/research_notebook/_config.yml
@@ -9,3 +9,5 @@ title                       : Research Notebook  # The title of the book. Will b
 author                      : J. Emmanuel Johnson  # The author of the book
 copyright                   : "2020"  # Copyright year to be placed in the footer
 logo                        : book.png  # A path to the book logo
+execute:
+  execute_notebooks: cache
