--- a/research_notebook/_toc.yml
+++ b/research_notebook/_toc.yml
@@ -1,9 +1,8 @@
-# Table of contents
-# Learn more at https://jupyterbook.org/customize/toc.html
-- file: intro
-
-- part: Resources
-  chapters: 
+format: jb-book
+root: intro
+parts:
+- caption: Resources
+  chapters:
   - file: content/resources/python/overview.md
     sections:
     - file: content/resources/python/ides.md
@@ -12,9 +11,8 @@
     - file: content/resources/python/dl_stack.md
     - file: content/resources/python/scale_stack.md
     - file: content/resources/python/good_code.md
-
-- part: Tutorials
-  chapters: 
+- caption: Tutorials
+  chapters:
   - file: content/tutorials/jax_journey/overview.md
     sections:
     - file: content/tutorials/jax_journey/ecosystem.md
@@ -30,9 +28,8 @@
   - file: content/tutorials/remote/overview.md
     sections:
     - file: content/tutorials/remote/vscode_jlab.md
-
-- part: Notes
-  chapters: 
+- caption: Notes
+  chapters:
   - file: content/notes/bayesian/overview.md
     sections:
     - file: content/notes/bayesian/intro
@@ -43,10 +40,10 @@
     - file: content/notes/bayesian/confidence_intervals.md
   - file: content/notes/concepts/overview.md
     sections:
-    - file: content/notes/concepts/change_of_variables.md 
-    - file: content/notes/concepts/identity_trick.md 
-    - file: content/notes/concepts/inverse_function.md 
-    - file: content/notes/concepts/jensens.md 
+    - file: content/notes/concepts/change_of_variables.md
+    - file: content/notes/concepts/identity_trick.md
+    - file: content/notes/concepts/inverse_function.md
+    - file: content/notes/concepts/jensens.md
     - file: content/notes/concepts/lin_alg.md
   - file: content/notes/kernels/overview.md
     sections:
@@ -61,13 +58,11 @@
   - file: content/notes/info_theory/overview.md
     sections:
     - file: content/notes/info_theory/experiments/rbig_sample_consistency.ipynb
-
-- part: Data
-  chapters: 
+- caption: Data
+  chapters:
   - file: content/notes/data/overview.md
     sections:
     - file: content/notes/data/cds.md
-
-- part: References
-  chapters: 
+- caption: References
+  chapters:
   - file: bib.md
