added new gf jax notebook.

--- a/research_notebook/_toc.yml
+++ b/research_notebook/_toc.yml
@@ -25,6 +25,7 @@ parts:
         - file: content/tutorials/jax_journey/algorithms/bisection
         - file: content/tutorials/jax_journey/algorithms/kernel_derivatives
         - file: content/tutorials/jax_journey/algorithms/gpr
+        - file: content/tutorials/jax_journey/gfs_with_jax.ipynb
     - file: content/tutorials/remote/overview
       sections:
       - file: content/tutorials/remote/vscode_jlab
