updated the conda, jupyter, ssh tutorials.

--- a/research_notebook/_toc.yml
+++ b/research_notebook/_toc.yml
@@ -28,6 +28,7 @@ parts:
         - file: content/tutorials/jax_journey/gfs_with_jax.ipynb
     - file: content/tutorials/remote/overview
       sections:
+      - file: content/tutorials/remote/ssh
       - file: content/tutorials/remote/conda
       - file: content/tutorials/remote/vscode_jlab
   - caption: Notes
