--- a/research_notebook/_config.yml
+++ b/research_notebook/_config.yml
@@ -8,7 +8,7 @@
 title                       : Research Notebook  # The title of the book. Will be placed in the left navbar.
 author                      : J. Emmanuel Johnson  # The author of the book
 copyright                   : "2022"  # Copyright year to be placed in the footer
-logo                        : book.png  # A path to the book logo
+logo                        : book_v2.jpeg  # A path to the book logo
 # bibtex_reference_style: author_year 
 execute:
   execute_notebooks: "off"
@@ -18,6 +18,11 @@ repository:
   path_to_book              : research_notebook  # Optional path to your book, relative to the repository root
   branch                    : main  # Which branch of the repository should be used when creating links (optional)
 
+# Add GitHub buttons to your book
+# See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
+html:
+  use_issues_button: true
+  use_repository_button: true
 
 bibtex_bibfiles:
   - references.bib
@@ -27,3 +32,13 @@ sphinx:
   config:
     bibtex_reference_style: author_year 
     # - content/notes/bayesian/bayesian.bib
+
+# parse:
+#   myst_enable_extensions:
+#     # don't forget to list any other extensions you want enabled,
+#     # including those that are enabled by default!
+#     - mathtools
+#     - html_image
+
+launch_buttons:
+  colab_url: "https://colab.research.google.com"
