--- a/research_notebook/_config.yml
+++ b/research_notebook/_config.yml
@@ -5,22 +5,22 @@
 
 #######################################################################################
 # Book settings
-title                       : Research Notebook  # The title of the book. Will be placed in the left navbar.
-author                      : J. Emmanuel Johnson  # The author of the book
-copyright                   : "2022"  # Copyright year to be placed in the footer
-logo                        : book_v2.jpeg  # A path to the book logo
+title: Research Notebook # The title of the book. Will be placed in the left navbar.
+author: J. Emmanuel Johnson # The author of the book
+copyright: "2023" # Copyright year to be placed in the footer
+logo: book_v2.jpeg # A path to the book logo
 # bibtex_reference_style: author_year
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
-  execute_notebooks: "off" #cache
+  execute_notebooks: "off" #"cache" "force"
   timeout: 120
 
 repository:
-  url                       : https://github.com/jejjohnson/research_notebook # Online location of your book
-  path_to_book              : research_notebook  # Optional path to your book, relative to the repository root
-  branch                    : main  # Which branch of the repository should be used when creating links (optional)
+  url: https://github.com/jejjohnson/research_notebook # Online location of your book
+  path_to_book: research_notebook # Optional path to your book, relative to the repository root
+  branch: main # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
@@ -51,9 +51,9 @@ sphinx:
     bibtex_reference_style: author_year
     # - content/notes/bayesian/bayesian.bib
   extra_extensions:
+    - sphinxcontrib.mermaid
     - sphinx_proof
   #   - sphinx_togglebutton
-
 
 # parse:
 #   myst_enable_extensions:
