--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,7 @@
-# packages in environment at /Users/eman/miniconda3/envs/jbook:
-#
-# Name                    Version                   Build  Channel
-argon2-cffi               21.3.0             pyhd8ed1ab_0    conda-forge
-argon2-cffi-bindings      21.2.0          py310h8e9501a_3    conda-forge
-ca-certificates           2022.12.7            h4653dfc_0    conda-forge
-charset-normalizer        2.1.1              pyhd8ed1ab_0    conda-forge
-click-completion          0.5.0                      py_1    conda-forge
-click-log                 0.4.0              pyhd8ed1ab_0    conda-forge
-flit-core                 3.8.0              pyhd8ed1ab_0    conda-forge
-importlib-metadata        6.0.0              pyha770c72_0    conda-forge
-jinja2-time               0.2.0                    pypi_0    pypi
-jupyter-book              0.13.2             pyhd8ed1ab_0    conda-forge
-jupyter-cache             0.4.3              pyhd8ed1ab_0    conda-forge
-jupyter-server-mathjax    0.2.6              pyh5bfe37b_1    conda-forge
-jupyter-sphinx            0.3.2              pyhd8ed1ab_1    conda-forge
-linkify-it-py             2.0.0              pyhd8ed1ab_0    conda-forge
-markdown-it-py            1.1.0              pyhd8ed1ab_0    conda-forge
-matplotlib-inline         0.1.6              pyhd8ed1ab_0    conda-forge
-mdit-py-plugins           0.2.8              pyhd8ed1ab_0    conda-forge
-myst-nb                   0.13.2             pyhd8ed1ab_0    conda-forge
-myst-parser               0.15.2             pyhd8ed1ab_0    conda-forge
-nbconvert-core            6.5.3              pyhd8ed1ab_0    conda-forge
-nbconvert-pandoc          6.5.3              pyhd8ed1ab_0    conda-forge
-nest-asyncio              1.5.6              pyhd8ed1ab_0    conda-forge
-notebook-shim             0.2.2              pyhd8ed1ab_0    conda-forge
-pkgutil-resolve-name      1.3.10             pyhd8ed1ab_0    conda-forge
-prompt-toolkit            3.0.38             pyha770c72_0    conda-forge
-pybtex-docutils           1.0.2           py310hbe9552e_2    conda-forge
-pydata-sphinx-theme       0.8.1              pyhd8ed1ab_0    conda-forge
-python-dateutil           2.8.2              pyhd8ed1ab_0    conda-forge
-python-fastjsonschema     2.16.3             pyhd8ed1ab_0    conda-forge
-python-json-logger        2.0.7              pyhd8ed1ab_0    conda-forge
-python-slugify            8.0.1                    pypi_0    pypi
-rfc3339-validator         0.1.4              pyhd8ed1ab_0    conda-forge
-rfc3986-validator         0.1.1              pyh9f0ad1d_0    conda-forge
-sphinx-book-theme         0.3.3              pyhd8ed1ab_0    conda-forge
-sphinx-comments           0.0.3              pyh9f0ad1d_0    conda-forge
-sphinx-copybutton         0.5.0              pyhd8ed1ab_0    conda-forge
-sphinx-design             0.1.0              pyhd8ed1ab_0    conda-forge
-sphinx-external-toc       0.3.1              pyhd8ed1ab_0    conda-forge
-sphinx-jupyterbook-latex  0.5.2              pyhd8ed1ab_0    conda-forge
-sphinx-multitoc-numbering 0.1.3              pyhd8ed1ab_0    conda-forge
-sphinx-proof              0.1.3                    pypi_0    pypi
-sphinx-thebe              0.2.1              pyhd8ed1ab_0    conda-forge
-sphinx-togglebutton       0.3.2              pyhd8ed1ab_0    conda-forge
-sphinxcontrib-applehelp   1.0.4              pyhd8ed1ab_0    conda-forge
-sphinxcontrib-bibtex      2.5.0              pyhd8ed1ab_0    conda-forge
-sphinxcontrib-devhelp     1.0.2                      py_0    conda-forge
-sphinxcontrib-htmlhelp    2.0.1              pyhd8ed1ab_0    conda-forge
-sphinxcontrib-jsmath      1.0.1                      py_0    conda-forge
-sphinxcontrib-mermaid     0.8.1                    pypi_0    pypi
-sphinxcontrib-qthelp      1.0.3                      py_0    conda-forge
-sphinxcontrib-serializinghtml 1.1.5              pyhd8ed1ab_2    conda-forge
-text-unidecode            1.3                      pypi_0    pypi
-typing-extensions         4.4.0                hd8ed1ab_0    conda-forge
-uc-micro-py               1.0.1              pyhd8ed1ab_0    conda-forge
-websocket-client          1.5.1              pyhd8ed1ab_0    conda-forge
+jupyter-book
+matplotlib
+numpy
+ghp-import
+sphinx-proof
+myst-parser
+sphinx-copybutton
