--- a/research_notebook/_config.yml
+++ b/research_notebook/_config.yml
@@ -54,12 +54,12 @@ sphinx:
     - sphinxcontrib.mermaid
     - sphinx_proof
   #   - sphinx_togglebutton
-parse:
-  myst_enable_extensions:
-    # don't forget to list any other extensions you want enabled,
-    # including those that are enabled by default!
-    - amsmath
-    - mathtools
+# parse:
+#   myst_enable_extensions:
+#     # don't forget to list any other extensions you want enabled,
+#     # including those that are enabled by default!
+#     - amsmath
+#     - mathtools
 
 # parse:
 #   myst_enable_extensions:
