added more inv probs.

--- a/research_notebook/_toc.yml
+++ b/research_notebook/_toc.yml
@@ -223,6 +223,7 @@ parts:
       - file: content/notes/misc/diff_operators.md
       - file: content/notes/misc/qg.md
       - file: content/notes/misc/elliptical_pde_solver.md
+      - file: content/notes/misc/inverse_probs.md
   # ###################################################################
   # CHEATSHEETS
   # ###################################################################
